--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,10 @@
       name="keyword"
       content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React"
     />
+
+    <link rel="shortcut icon" href="./Jarm Logo.png" />
     <title>JARM</title>
 
-    <link rel="icon" href="./Jarm Logo.svg" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4@5.0.5/bootstrap-4.min.css"
