--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
       name="keyword"
       content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React"
     />
+    <link rel="shortcut icon" href="./Jarm Logo.png" type="image/x-icon" />
 
-    <link rel="shortcut icon" href="./Jarm Logo.png" />
     <title>JARM</title>
 
     <link
