--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       name="keyword"
       content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React"
     />
-    <link rel="shortcut icon" href="./Jarm Logo.png" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <title>JARM</title>
 
